WebSoketService/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: chat-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: hiron1999/chat-service:latest
          ports:
            - containerPort: 8080
