WebSoketService/k8s/kafka-ovh.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  ports:
    - port: 9092
      name: broker
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kafka
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          image: confluentinc/cp-kafka:7.4.4
          ports:
            - containerPort: 9092
          command:
            - bash
            - -c
            - |
              export KAFKA_BROKER_ID=$((${HOSTNAME##*-}));
              export KAFKA_ADVERTISED_LISTENERS="PLAINTEXT://${HOSTNAME}.kafka:9092"
              exec /etc/confluent/docker/run
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
