WebSoketService/k8s/kafka-rest-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest
spec:
  ports:
    - port: 8082
  selector:
    app: kafka-rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-rest
  template:
    metadata:
      labels:
        app: kafka-rest
    spec:
      containers:
        - name: kafka-rest
          image: confluentinc/cp-kafka-rest:7.4.4
          ports:
            - containerPort: 8082
