WebSoketService/k8s/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  clusterIP: None
  ports:
    - port: 2181
      name: client
    - port: 2888
      name: follower
    - port: 3888
      name: election
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper

spec:
  serviceName: zookeeper
  replicas: 3
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      securityContext:
        runAsUser: 1000   # user inside container
        fsGroup: 1000     # group ownership for mounted volumes

      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0

          ports:
            - name: client
              containerPort: 2181
              protocol: TCP
            - name: quorum
              containerPort: 2888
              protocol: TCP
            - name: leader-election
              containerPort: 3888
              protocol: TCP

          command: [ "/bin/sh", "-c" ]
          args:
            - |
              # Extract ordinal from pod name
              ID=$(( ${HOSTNAME##*-} + 1 ))
              echo "Setting myid=$ID"
              echo $ID > /var/lib/zookeeper/data/myid
              export ZOOKEEPER_SERVER_ID=$ID
              # Now start the main process
              exec /etc/confluent/docker/run

          volumeMounts:
            - name: data
              mountPath: /var/lib/zookeeper/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
